OTP Feature on login, bugs resolved

--- a/app/src/main/res/layout/fragment_view_user_details.xml
+++ b/app/src/main/res/layout/fragment_view_user_details.xml
@@ -65,7 +65,7 @@
         android:id="@+id/tv_name_user_detTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name_text"
+        android:text="@string/name_text1"
         android:textSize="14sp"
         android:textColor="@color/appColorBlack"
         android:includeFontPadding="false"
@@ -82,7 +82,6 @@
         android:text="Muhammad Ahmed"
         android:inputType="textMultiLine"
         android:textSize="14sp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="15dp"
@@ -117,7 +116,7 @@
         android:id="@+id/tv_mobileNo_user_detTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mobile_no"
+        android:text="@string/mobile_no1"
         android:textSize="12sp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
@@ -168,7 +167,7 @@
         android:id="@+id/tv_age_user_detTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/age"
+        android:text="@string/age1"
         android:textSize="12sp"
         android:includeFontPadding="false"
         android:textColor="@color/appColorBlack"
@@ -218,7 +217,7 @@
         android:id="@+id/tv_gender_user_detTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/gender"
+        android:text="@string/gender1"
         android:textSize="12sp"
         android:includeFontPadding="false"
         android:textColor="@color/appColorBlack"
@@ -234,7 +233,6 @@
         android:layout_height="wrap_content"
         android:text="Male"
         android:textSize="12sp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginEnd="15dp"
@@ -270,7 +268,7 @@
         android:id="@+id/tv_district_user_detTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dist_text"
+        android:text="@string/dist_text1"
         android:textSize="12sp"
         android:textColor="@color/appColorBlack"
         android:includeFontPadding="false"
@@ -374,7 +372,7 @@
         android:id="@+id/tv_address_user_detTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/address_text"
+        android:text="@string/address_text1"
         android:textSize="12sp"
         android:textColor="@color/appColorBlack"
         android:includeFontPadding="false"
@@ -392,7 +390,6 @@
         android:text="House#1548, Block 2, Ghulshane Iqbal Karachi"
         android:textSize="12sp"
         android:fontFamily="@font/myriad_pro_regular"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginEnd="15dp"
